--- a/package.json
+++ b/package.json
@@ -3,8 +3,20 @@
   "version": "0.1.0",
   "description": "Funny log for nodejs",
   "main": "index.js",
-  "repository": "https://github.com/rodolfomedeiros/funnylog",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rodolfomedeiros/funnylog.git"
+  },
+  "keywords": [
+    "log"
+  ],
   "author": "Rodolfo Medeiros",
   "license": "MIT",
-  "private": false
+  "bugs": {
+    "url": "https://github.com/rodolfomedeiros/funnylog/issues"
+  },
+  "homepage": "https://github.com/rodolfomedeiros/funnylog#readme"
 }
